连接到本地 mysql 注意连接字符串

--- a/User.API/User.API/appsettings.json
+++ b/User.API/User.API/appsettings.json
@@ -11,5 +11,8 @@
         "Default": "Warning"
       }
     }
+  },
+  "ConnectionStrings": {
+    "MysqlUser": "server=127.0.0.1;port=3306;database=beta_user;userid=root;password=123456;SslMode=None;"
   }
 }
